--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+
+    <title>John Bianchi</title>
+
+    <link rel="stylesheet" href="normalize.min.css">
+    <link rel="stylesheet" href="style.css">
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-17386649-3', 'johnbianchi.github.io');
+      ga('send', 'pageview');
+    </script>
+  </head>
+
+  <body>
+
+    <div id="main">
+      <h1>John Bianchi</h1>
+
+      <p>
+        <a href="https://twitter.com/jbianchi0">twitter</a> &#183; <a href="https://github.com/johnbianchi">github</a> &#183; <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#106;&#97;&#99;&#107;&#110;&#97;&#103;&#101;&#108;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;">email</a>
+      </p>
+    </div>
+  </body>
+</html>
